--- a/CompleteExample.API/appsettings.json
+++ b/CompleteExample.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "SchoolContext": "Data Source=<database>;Database=CompleteExample;User ID=<username>;Password=<Password>;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
